# aclsim

./: .gitignore  CMakeLists.txt  README.md  alternative.txt  makefile  master.txt  ports.cfg  ports.txt  task.txt  testVector.c  token.c
include/: constants.h  ip.h  match.h  option.h  rule.h  vector.h
src/: ArgumentParser.cpp  ArgumentParser.hpp  Ip.cpp  Ip.hpp  Matcher.cpp  Matcher.hpp  Rule.cpp  Rule.hpp  RuleParser.cpp  RuleParser.hpp  Segment.cpp  Segment.hpp  SegmentParser.cpp  SegmentParser.hpp  ip.c  main.c  main.cpp  mainPipe.txt  match.c  option.c  rule.c  vector.c
tests/: a.out  exampleCall.txt  testRule.txt  testRule1.txt  testRule2.txt  testVector.txt  testfile  token.c  tokenRule.c
